Added projects to featured projects. Added images.

--- a/code/index.html
+++ b/code/index.html
@@ -25,13 +25,13 @@
         <h3>+ illustrator</h3>
       </div>
       <section class="circles">
-        <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/ragnaulfars/" class="circle">
+        <a target="_blank" rel="noopener noreferrer" aria-label="Links to Linked-In" href="https://www.linkedin.com/in/ragnaulfars/" class="circle">
           <img class="icons" src="./assets/icon-linkedin.svg" alt="Linked-in icon">
         </a>
-        <a target="_blank" rel="noopener noreferrer" href="https://github.com/Ragtulf" class="circle">
+        <a target="_blank" rel="noopener noreferrer" aria-label="Links to Github" href="https://github.com/Ragtulf" class="circle">
           <img class="icons" src="./assets/github.svg" alt="Github icon">
         </a>
-        <a target="_blank" rel="noopener noreferrer" href="https://stackoverflow.com/c/technigo/users/61/?tab=profile" class="circle">
+        <a target="_blank" rel="noopener noreferrer" aria-label="Links to Stack Overflow" href="https://stackoverflow.com/c/technigo/users/61/?tab=profile" class="circle">
           <img class="icons" src="./assets/stackoverflow.svg" alt="Stack-overflow icon">
         </a>
       </section>
@@ -64,74 +64,72 @@
     <h2>FEATURED PROJECTS</h2>
       <div class="featured-wrapper">
         <article class="card">
-          <a target="_blank" rel="noopener noreferrer" href="https://admiring-kilby-577ac3.netlify.com/" class="image-box">
-            <img src="./assets/news-site.png" alt="A picture of News Site website">
+          <a target="_blank" rel="noopener noreferrer" href="https://github.com/Ragtulf/project-react-native-app" class="image-box">
+            <img src="./assets/Advice-App.png" alt="Two phones with the screens from the app">
             <div class="over-image">
-              <h6 class="project-name">MAGAZINE</h6>
+              <h6 class="project-name">GET ADVICE!</h6>
             </div>
           </a>
-          <a target="_blank" rel="noopener noreferrer" href="https://admiring-kilby-577ac3.netlify.com/" class="project-description">
-            <span class="red-bold">NEWS SITE.</span> Write short what the project is about and what technologies you used. <span class="red-bold underlined" >>></span>
+          <a target="_blank" rel="noopener noreferrer" href="https://github.com/Ragtulf/project-react-native-app" class="project-description">
+            <span class="red-bold">ADVICE APP.</span> My first React Native App. Shake your phone to get advice. <span class="red-bold underlined" >>></span>
           </a>
           <div class="tags">
-            <p class="tag">HTML5</p>
-            <p class="tag">CSS3</p>
-            <p class="tag">SASS</p>
-            <p class="tag">Javascript ES6</p>
+            <p class="tag">React Native</p>
+            <p class="tag">API</p>
+            <p class="tag">JavaScript</p>
           </div>
         </article>
 
         <article class="card">
-          <a target="_blank" rel="noopener noreferrer" href="https://dazzling-lovelace-cca7c7.netlify.com/" class="image-box">
-            <img src="./assets/weather-app.png" alt="A picture of Weather-app website">
+          <a target="_blank" rel="noopener noreferrer" href="https://github.com/Ragtulf/project-happy-thoughts" class="image-box">
+            <img src="./assets/Happy-Thoughts.png" alt="A screenshot of the Happy Thought feed">
             <div class="over-image">
-              <h6 class="project-name">REYKJAVIK WEATHER</h6>
+              <h6 class="project-name">POST YOUR HAPPY THOUGHT!</h6>
             </div>
           </a>
-          <a target="_blank" rel="noopener noreferrer" href="https://dazzling-lovelace-cca7c7.netlify.com/" class="project-description">
-            <span class="red-bold">WEATHER APP.</span> Write short what the project is about and what technologies you used. <span class="red-bold underlined">>></span>
+          <a target="_blank" rel="noopener noreferrer" href="https://github.com/Ragtulf/project-happy-thoughts" class="project-description">
+            <span class="red-bold">HAPPY THOUGHTS.</span> A twitterlike API where you can post your happy thoughts❤️<span class="red-bold underlined">>></span>
+          </a>
+          <div class="tags">
+            <p class="tag">React.js</p>
+            <p class="tag">JavaScript</p>
+            <p class="tag">API</p>
+            <p class="tag">CSS</p>
+          </div>
+        </article>
+
+        <article class="card">
+          <a target="_blank" rel="noopener noreferrer" href="https://github.com/Ragtulf/project-movies" class="image-box">
+            <img src="./assets/movie-project.png" alt="A screenshot of the website showing upcoming movies in Sweden">
+            <div class="over-image">
+              <h6 class="project-name">SEE WHAT IS COMING UP!</h6>
+            </div>
+          </a>
+          <a target="_blank" rel="noopener noreferrer" href="https://github.com/Ragtulf/project-movies" class="project-description">
+            <span class="red-bold">MOVIE SITE.</span> Website that shows upcoming movies in Sweden. <span class="red-bold underlined">>></span>
+          </a>
+          <div class="tags">
+            <p class="tag">React.js</p>
+            <p class="tag">JavaScript</p>
+            <p class="tag">API</p>
+            <p class="tag">CSS</p>
+          </div>
+        </article>
+
+        <article class="card">
+          <a target="_blank" rel="noopener noreferrer" href="https://github.com/Ragtulf/project-survey" class="image-box">
+            <img src="./assets/Survey.png" alt="A screenshot of the survey">
+            <div class="over-image">
+                <h6 class="project-name">TAKE THE SURVEY!</h6>
+            </div>
+          </a>
+          <a target="_blank" rel="noopener noreferrer" href="https://github.com/Ragtulf/project-survey" class="project-description">
+            <span class="red-bold">I-WANT-TO-GET-TO-KNOW-YOU-SURVEY</span> Online survey that wants to get to know you <span class="red-bold underlined">>></span>
           </a>
           <div class="tags">
             <p class="tag">React</p>
-            <p class="tag">CSS3</p>
-            <p class="tag">SASS</p>
-            <p class="tag">HTML5</p>
-          </div>
-        </article>
-
-        <article class="card">
-          <a target="_blank" rel="noopener noreferrer" href="https://dazzling-lichterman-7db9bf.netlify.com/" class="image-box">
-            <img src="./assets/business-site.png" alt="A picture of a subscription form for an online magazine">
-            <div class="over-image">
-              <h6 class="project-name">SUBSCRIBE HERE!</h6>
-            </div>
-          </a>
-          <a target="_blank" rel="noopener noreferrer" href="https://dazzling-lichterman-7db9bf.netlify.com/" class="project-description">
-            <span class="red-bold">BUSINESS SITE.</span> Write short what the project is about and what technologies you used. <span class="red-bold underlined">>></span>
-          </a>
-          <div class="tags">
-            <p class="tag">HTML5</p>
-            <p class="tag">CSS3</p>
-            <p class="tag">SASS</p>
-            <p class="tag">Javascript ES6</p>
-          </div>
-        </article>
-
-        <article class="card">
-          <a target="_blank" rel="noopener noreferrer" href="https://epic-hodgkin-b4c0d1.netlify.com/" class="image-box">
-            <img src="./assets/cluedo-cards2.png" alt="A picture of the Cluedo Cards website">
-            <div class="over-image">
-                <h6 class="project-name">REVEAL THE MYSTERY</h6>
-            </div>
-          </a>
-          <a target="_blank" rel="noopener noreferrer" href="https://epic-hodgkin-b4c0d1.netlify.com/" class="project-description">
-            <span class="red-bold">CLUEDO CARDS.</span> Write short what the project is about and what technologies you used. <span class="red-bold underlined">>></span>
-          </a>
-          <div class="tags">
-            <p class="tag">React</p>
-            <p class="tag">CSS3</p>
-            <p class="tag">SASS</p>
-            <p class="tag">HTML5</p>
+            <p class="tag">JavaScript</p>
+            <p class="tag">CSS</p>
           </div>
         </article>
       </div>  
