Added projects to other projects

--- a/code/index.html
+++ b/code/index.html
@@ -94,6 +94,7 @@
             <p class="tag">React.js</p>
             <p class="tag">JavaScript</p>
             <p class="tag">API</p>
+            <p class="tag">Flexbox</p>
             <p class="tag">CSS</p>
           </div>
         </article>
@@ -113,6 +114,7 @@
             <p class="tag">JavaScript</p>
             <p class="tag">API</p>
             <p class="tag">CSS</p>
+            <p class="tag">Flexbox</p>
           </div>
         </article>
 
@@ -127,8 +129,9 @@
             <span class="red-bold">I-WANT-TO-GET-TO-KNOW-YOU-SURVEY</span> Online survey that wants to get to know you <span class="red-bold underlined">>></span>
           </a>
           <div class="tags">
-            <p class="tag">React</p>
+            <p class="tag">React.js</p>
             <p class="tag">JavaScript</p>
+            <p class="tag">Flexbox</p>
             <p class="tag">CSS</p>
           </div>
         </article>
@@ -139,49 +142,87 @@
       <h5>OTHER PROJECTS</h5>
       <div class="other-projects">
         <div class="other-pro-container">
-          <a target="_blank" rel="noopener noreferrer" href="#" class="project-description">
-            <span class="red-bold red-bold-underlined">PROJECT TITLE.</span> A short summary of the project. <span class="red-bold red-bold-underlined">>></span>
+          <a target="_blank" rel="noopener noreferrer" href="https://github.com/Ragtulf/project-music-releases" class="project-description">
+            <span class="red-bold red-bold-underlined">MUSIC RELEASES.</span> A music release site that pulls data from a static API. <span class="red-bold red-bold-underlined">>></span>
           </a>
           <div class="tags">
-            <p class="tag">React</p>
-            <p class="tag">CSS3</p>
-            <p class="tag">SASS</p>
-            <p class="tag">HTML5</p>
+            <p class="tag">React.js</p>
+            <p class="tag">API</p>
+            <p class="tag">JSX</p>
+            <p class="tag">CSS</p>
+            <p class="tag">Flexbox</p>
+            <p class="tag">mob-programming</p>
           </div>
         </div>
 
         <div class="other-pro-container">
-          <a target="_blank" rel="noopener noreferrer" href="#" class="project-description">
-            <span class="red-bold red-bold-underlined">DESCRIPTION OF TITLE.</span> Write short what the project is about and what technologies you used. <span class="red-bold red-bold-underlined">>></span>
+          <a target="_blank" rel="noopener noreferrer" href="https://github.com/Ragtulf/project-food-giraffes" class="project-description">
+            <span class="red-bold red-bold-underlined">FOOD REVIEW WEBSITE.</span> A website that shows Japanese food in London using Zomato API <span class="red-bold red-bold-underlined">>></span>
           </a>
           <div class="tags">
-            <p class="tag">React</p>
-            <p class="tag">CSS3</p>
-            <p class="tag">SASS</p>
+            <p class="tag">JavaScript</p>
+            <p class="tag">API</p>
+            <p class="tag">CSS</p>
             <p class="tag">HTML5</p>
+            <p class="tag">Flexbox</p>
+            <p class="tag">mob-programming</p>
           </div>
         </div>
 
         <div class="other-pro-container">
-          <a target="_blank" rel="noopener noreferrer" href="https://wonderful-hopper-f7ab96.netlify.com" class="project-description">
-            <span class="red-bold red-bold-underlined">PIZZA BOT.</span> Chat with a pizza bot. Hours of fun. <span class="red-bold red-bold-underlined">>></span>
+          <a target="_blank" rel="noopener noreferrer" href="https://github.com/Ragtulf/project-weather-app" class="project-description">
+            <span class="red-bold red-bold-underlined">WEATHER APP.</span> The weather in Reykjavík today and a forcast for the next five days. <span class="red-bold red-bold-underlined">>></span>
+          </a>
+          <div class="tags">
+            <p class="tag">API</p>
+            <p class="tag">JavaScript</p>
+            <p class="tag">CSS</p>
+            <p class="tag">HTML5</p>
+            <p class="tag">Flexbox</p>
+          </div>
+        </div> 
+
+        <div class="other-pro-container">
+          <a target="_blank" rel="noopener noreferrer" href="https://github.com/Ragtulf/project-cluedo" class="project-description">
+            <span class="red-bold red-bold-underlined">CLUEDO CARDS.</span> Decks randomizing killers, weapons and rooms for a game of Cluedo. <span class="red-bold red-bold-underlined">>></span>
+          </a>
+          <div class="tags">
+            <p class="tag">JavaScript</p>
+            <p class="tag">CSS</p>
+            <p class="tag">HTML5</p>
+          </div>
+        </div> 
+
+        <div class="other-pro-container">
+          <a target="_blank" rel="noopener noreferrer" href="https://github.com/Ragtulf/project-pizza-bot" class="project-description">
+            <span class="red-bold red-bold-underlined">PIZZA BOT.</span> My first JavaScript project. Chat with a pizza bot. Hours of fun. <span class="red-bold red-bold-underlined">>></span>
           </a>
           <div class="tags">
             <p class="tag">Javascript</p>
             <p class="tag">HTML5</p>
-            <p class="tag">Node</p>
+            <p class="tag">pair-programming</p>
           </div>
         </div>
 
         <div class="other-pro-container">
-          <a target="_blank" rel="noopener noreferrer" href="#" class="project-description">
-            <span class="red-bold red-bold-underlined">PROJECT X.</span> My favorite project to date. <span class="red-bold red-bold-underlined">>></span>
+          <a target="_blank" rel="noopener noreferrer" href="https://github.com/Ragtulf/project-business-site" class="project-description">
+            <span class="red-bold red-bold-underlined">BUSINESS SITE.</span> A signup form to subscribe to a magazine. <span class="red-bold red-bold-underlined">>></span>
           </a>
           <div class="tags">
-            <p class="tag">React</p>
-            <p class="tag">CSS3</p>
-            <p class="tag">SASS</p>
             <p class="tag">HTML5</p>
+            <p class="tag">CSS</p>
+            <p class="tag">Flexbox</p>
+          </div>
+        </div> 
+
+        <div class="other-pro-container">
+          <a target="_blank" rel="noopener noreferrer" href="https://github.com/Ragtulf/project-news-site" class="project-description">
+            <span class="red-bold red-bold-underlined">ONLINE MAGAZINE.</span> An imagined online magazine. <span class="red-bold red-bold-underlined">>></span>
+          </a>
+          <div class="tags">
+            <p class="tag">HTML5</p>
+            <p class="tag">CSS</p>
+            <p class="tag">Flexbox</p>
           </div>
         </div> 
       </div>
