Fixed the Thoughts section. Added some pics

--- a/code/index.html
+++ b/code/index.html
@@ -103,7 +103,7 @@
           <a target="_blank" rel="noopener noreferrer" href="https://github.com/Ragtulf/project-movies" class="image-box">
             <img src="./assets/movie-project.png" alt="A screenshot of the website showing upcoming movies in Sweden">
             <div class="over-image">
-              <h6 class="project-name">SEE WHAT IS COMING UP!</h6>
+              <h6 class="project-name">SEE WHAT MOVIES ARE COMING UP!</h6>
             </div>
           </a>
           <a target="_blank" rel="noopener noreferrer" href="https://github.com/Ragtulf/project-movies" class="project-description">
@@ -235,15 +235,45 @@
     <div class="my-thoughts-wrapper">
 
       <article class="thought-card">
-        <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/pulse/newbie-developer-ragna-%25C3%25BAlfarsd%25C3%25B3ttir/?trackingId=wdKjzbfdSuGGeTpwDT7cBg%3D%3D" class="image-box">
+        <a aria-label="A link to an article about helpful website" target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/pulse/helpful-websites-ragna-%25C3%25BAlfarsd%25C3%25B3ttir/?trackingId=gidSyPxIS%2Fu0t9FnPf2ciQ%3D%3D" class="image-box">
+          <img src="./assets/toolbox.png" alt="A wall filled with carpentry tools">
+        </a>
+        <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/pulse/helpful-websites-ragna-%25C3%25BAlfarsd%25C3%25B3ttir/?trackingId=gidSyPxIS%2Fu0t9FnPf2ciQ%3D%3D" class="articles-by-me">
+          <div class="red-on-hover">
+            <p class="red-thin">APR 2020</p>
+          <h6>Helpful Websites: </h6>
+          <p>
+            I've finished the first half of the Technigo Frontend Development Bootcamp and it is SO MUCH FUN! Turns out this coding thing is really cool and fun and only gets better. <span class="red-bold" >>></span>
+          </p> 
+          </div>
+        </a>
+      </article>
+
+      <article class="thought-card">
+        <a aria-label="A link to an article about finding the way to code" target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/pulse/finding-my-place-ragna-%C3%BAlfarsd%C3%B3ttir/" class="image-box">
+          <img src="./assets/larva.png" alt="A caterpillar on salad">
+        </a>
+        <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/pulse/finding-my-place-ragna-%C3%BAlfarsd%C3%B3ttir/" class="articles-by-me">
+          <div class="red-on-hover">
+            <p class="red-thin">MAR 2020</p>
+          <h6>Finding My Place: </h6>
+          <p>
+            I'm a developer. That is a scary thing for me to say. But our teachers at Technigo insist, we are developers. Junior developers. <span class="red-bold" >>></span>
+          </p> 
+          </div>
+        </a>
+      </article>
+
+      <article class="thought-card">
+        <a aria-label="A link to an article about beginning frondend development bootcamp" target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/pulse/newbie-developer-ragna-%25C3%25BAlfarsd%25C3%25B3ttir/?trackingId=wdKjzbfdSuGGeTpwDT7cBg%3D%3D" class="image-box">
           <img src="./assets/rollercoaster04.jpeg" alt="A colorful rollercoaster">
         </a>
         <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/pulse/newbie-developer-ragna-%25C3%25BAlfarsd%25C3%25B3ttir/?trackingId=wdKjzbfdSuGGeTpwDT7cBg%3D%3D" class="articles-by-me">
           <div class="red-on-hover">
-            <p class="red-thin">JAN 2020</p>
+            <p class="red-thin">FEB 2020</p>
             <h6>A Newbie Developer: </h6>
             <p>
-              Learning to love code Writing code is less about “just working”. Instead, it’s much more about creativity. It’s similar to creative writing in that the author architecting a story must use an assortment of tools and components (i.e., content) in such a way to satisfy a particular objective. <span class="red-bold" >>></span>
+              Starting the Frontend Developer Bootcamp at Technigo is so much fun. At first it felt very chaotic and stressful but now, most of all, I am enjoying myself. <span class="red-bold" >>></span>
             </p> 
           </div>
         </a>
