--- a/code/index.html
+++ b/code/index.html
@@ -63,6 +63,25 @@
     <h2>FEATURED PROJECTS</h2>
       <div class="featured-wrapper">
         <article class="card">
+          <a target="_blank" rel="noopener noreferrer" href="https://github.com/Ragtulf/project-todos" class="image-box">
+            <img src="./assets/todo.png" alt="A screenshot of the ToDo app">
+            <div class="over-image">
+              <h6 class="project-name">KEEP TRACK OF YOUR LIFE!</h6>
+            </div>
+          </a>
+          <a target="_blank" rel="noopener noreferrer" href="https://github.com/Ragtulf/project-todos" class="project-description">
+            <span class="red-bold">TODO APP.</span> A ToDo web app done in React, using Redux <span class="red-bold underlined" >>></span>
+          </a>
+          <div class="tags">
+            <p class="tag">React.js</p>
+            <p class="tag">Redux</p>
+            <p class="tag">JSX</p>
+            <p class="tag">JavaScript</p>
+            <p class="tag">CSS</p>
+          </div>
+        </article>
+
+        <article class="card">
           <a target="_blank" rel="noopener noreferrer" href="https://github.com/Ragtulf/project-react-native-app" class="image-box">
             <img src="./assets/Advice-App.png" alt="Two phones with the screens from the app">
             <div class="over-image">
