Changed intro text

--- a/code/index.html
+++ b/code/index.html
@@ -46,6 +46,10 @@
   <section class="intro">
     <p class="intro-txt">
       Hello! I’m a frontend developer, a graphic designer and an illustrator all rolled into one. I love solving problems that matter and creating awesome, meaningful products for people to love.
+      <br>
+      What I like most about coding is the creativity and building things from scratch. 
+      <br>
+      My goal is to work in a great team where I can keep on learning and become a kickass developer.
     </p>
   </section>
 
