Working on image sizes and the hero banner

--- a/code/index.html
+++ b/code/index.html
@@ -36,7 +36,7 @@
         </a>
       </section>
       <div class="ragna">
-        <img src="./assets/ragna.JPG" alt="A profile picture of Ragna">
+        <img src="./assets/ragna_320.jpg" alt="A profile picture of Ragna">
       </div>
     </div>
   </header>
