Resized images and changed to jpegs

--- a/code/index.html
+++ b/code/index.html
@@ -68,7 +68,7 @@
       <div class="featured-wrapper">
         <article class="card">
           <a target="_blank" rel="noopener noreferrer" href="https://github.com/Ragtulf/project-todos" class="image-box">
-            <img src="./assets/todo.png" alt="A screenshot of the ToDo app">
+            <img src="./assets/todo.jpg" alt="A screenshot of the ToDo app">
             <div class="over-image">
               <h6 class="project-name">KEEP TRACK OF YOUR LIFE!</h6>
             </div>
@@ -87,7 +87,7 @@
 
         <article class="card">
           <a target="_blank" rel="noopener noreferrer" href="https://github.com/Ragtulf/project-react-native-app" class="image-box">
-            <img src="./assets/Advice-App.png" alt="Two phones with the screens from the app">
+            <img src="./assets/Advice-App.jpg" alt="Two phones with the screens from the app">
             <div class="over-image">
               <h6 class="project-name">GET ADVICE!</h6>
             </div>
@@ -104,7 +104,7 @@
 
         <article class="card">
           <a target="_blank" rel="noopener noreferrer" href="https://github.com/Ragtulf/project-happy-thoughts" class="image-box">
-            <img src="./assets/Happy-Thoughts.png" alt="A screenshot of the Happy Thought feed">
+            <img src="./assets/Happy-Thoughts.jpg" alt="A screenshot of the Happy Thought feed">
             <div class="over-image">
               <h6 class="project-name">POST YOUR HAPPY THOUGHT!</h6>
             </div>
@@ -123,7 +123,7 @@
 
         <article class="card">
           <a target="_blank" rel="noopener noreferrer" href="https://github.com/Ragtulf/project-movies" class="image-box">
-            <img src="./assets/movie-project.png" alt="A screenshot of the website showing upcoming movies in Sweden">
+            <img src="./assets/movie-project.jpg" alt="A screenshot of the website showing upcoming movies in Sweden">
             <div class="over-image">
               <h6 class="project-name">SEE WHAT MOVIES ARE COMING UP!</h6>
             </div>
@@ -142,7 +142,7 @@
 
         <article class="card">
           <a target="_blank" rel="noopener noreferrer" href="https://github.com/Ragtulf/project-survey" class="image-box">
-            <img src="./assets/Survey.png" alt="A screenshot of the survey">
+            <img src="./assets/Survey.jpg" alt="A screenshot of the survey">
             <div class="over-image">
                 <h6 class="project-name">TAKE THE SURVEY!</h6>
             </div>
@@ -258,7 +258,7 @@
 
       <article class="thought-card">
         <a aria-label="A link to an article about helpful website" target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/pulse/helpful-websites-ragna-%25C3%25BAlfarsd%25C3%25B3ttir/?trackingId=gidSyPxIS%2Fu0t9FnPf2ciQ%3D%3D" class="image-box">
-          <img src="./assets/toolbox.png" alt="A wall filled with carpentry tools">
+          <img src="./assets/toolbox.jpg" alt="A wall filled with carpentry tools">
         </a>
         <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/pulse/helpful-websites-ragna-%25C3%25BAlfarsd%25C3%25B3ttir/?trackingId=gidSyPxIS%2Fu0t9FnPf2ciQ%3D%3D" class="articles-by-me">
           <div class="red-on-hover">
@@ -273,7 +273,7 @@
 
       <article class="thought-card">
         <a aria-label="A link to an article about finding the way to code" target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/pulse/finding-my-place-ragna-%C3%BAlfarsd%C3%B3ttir/" class="image-box">
-          <img src="./assets/larva.png" alt="A caterpillar on salad">
+          <img src="./assets/larva.jpg" alt="A caterpillar on salad">
         </a>
         <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/pulse/finding-my-place-ragna-%C3%BAlfarsd%C3%B3ttir/" class="articles-by-me">
           <div class="red-on-hover">
