Fixed the Tech Section. Cleaned up in the style and added the Giraffe Quiz

--- a/code/index.html
+++ b/code/index.html
@@ -57,9 +57,11 @@
   <section class="tech">
     <h2>TECH</h2>
     <p class="tech-txt">
-      HTML, CSS, Flexbox, <span class="red">JavaScript,</span> ES6, JSX, <span class="red">React, React Hooks, </span>React Native, Redux, Node.js, Mongo DB, Web Accessibly, <span class="red">APIs,</span> mob-programming, pair-programming, Github.
+      HTML, CSS, Flexbox, <span class="red">JavaScript,</span> ES6, JSX, <span class="red">React, React Hooks, </span>React Native, Redux, Web Accessibly, <span class="red">APIs,</span> mob-programming, pair-programming, Github.
     </p>
   </section>
+
+  <!-- Skills I hope to add up in the tech section: Node.js, Mongo DB, -->
 
   <!-- FEATURED PROJECTS -->
 
@@ -103,6 +105,23 @@
         </article>
 
         <article class="card">
+          <a target="_blank" rel="noopener noreferrer" href="https://github.com/Ragtulf/project-redux-quiz-giraffes" class="image-box">
+            <img src="./assets/giraffe-quiz.jpg" alt="Three phones with screens from the quiz">
+            <div class="over-image">
+              <h6 class="project-name">SHOW OFF YOUR SKILLS!</h6>
+            </div>
+          </a>
+          <a target="_blank" rel="noopener noreferrer" href="https://github.com/Ragtulf/project-redux-quiz-giraffes" class="project-description">
+            <span class="red-bold">GIRAFFE QUIZ.</span>A quiz where you put your giraffe knowledge to the test<span role="img" aria-label="brain and strong arm emojis">🧠💪🏼</span><span class="red-bold underlined" >>></span>
+          </a>
+          <div class="tags">
+            <p class="tag">React Native</p>
+            <p class="tag">API</p>
+            <p class="tag">JavaScript</p>
+          </div>
+        </article>
+
+        <article class="card">
           <a target="_blank" rel="noopener noreferrer" href="https://github.com/Ragtulf/project-happy-thoughts" class="image-box">
             <img src="./assets/Happy-Thoughts.jpg" alt="A screenshot of the Happy Thought feed">
             <div class="over-image">
@@ -110,7 +129,7 @@
             </div>
           </a>
           <a target="_blank" rel="noopener noreferrer" href="https://github.com/Ragtulf/project-happy-thoughts" class="project-description">
-            <span class="red-bold">HAPPY THOUGHTS.</span> A twitterlike API where you can post your happy thoughts❤️<span class="red-bold underlined">>></span>
+            <span class="red-bold">HAPPY THOUGHTS.</span> A twitterlike API where you can post your happy thoughts<span role="img" aria-label="heart emoji">❤️</span><span class="red-bold underlined">>></span>
           </a>
           <div class="tags">
             <p class="tag">React.js</p>
