Updated projects and worked on styling. Commented out some material I might need later

--- a/code/index.html
+++ b/code/index.html
@@ -112,10 +112,28 @@
             </div>
           </a>
           <a target="_blank" rel="noopener noreferrer" href="https://github.com/Ragtulf/project-redux-quiz-giraffes" class="project-description">
-            <span class="red-bold">GIRAFFE QUIZ.</span>A quiz where you put your giraffe knowledge to the test<span role="img" aria-label="brain and strong arm emojis">🧠💪🏼</span><span class="red-bold underlined" >>></span>
+            <span class="red-bold">GIRAFFE QUIZ. </span>A quiz where you put your giraffe knowledge to the test<span role="img" aria-label="brain and strong arm emojis">🧠💪🏼</span><span class="red-bold underlined" >>></span>
           </a>
           <div class="tags">
             <p class="tag">React Native</p>
+            <p class="tag">API</p>
+            <p class="tag">JavaScript</p>
+          </div>
+        </article>
+
+        <article class="card">
+          <a target="_blank" rel="noopener noreferrer" href="https://github.com/Ragtulf/project-nutrition" class="image-box">
+            <img src="./assets/nutrition.jpg" alt="A screenshot of the nutrition application">
+            <div class="over-image">
+              <h6 class="project-name">CHECK WHAT IT IS YOU ARE EATING!</h6>
+            </div>
+          </a>
+          <a target="_blank" rel="noopener noreferrer" href="https://github.com/Ragtulf/project-nutrition" class="project-description">
+            <span class="red-bold">BARCODE CHECKER. </span>Type in a barcode of a food product and see nutritional information <span class="red-bold underlined" >>></span>
+          </a>
+          <div class="tags">
+            <p class="tag">React</p>
+            <p class="tag">Redux</p>
             <p class="tag">API</p>
             <p class="tag">JavaScript</p>
           </div>
@@ -158,30 +176,24 @@
             <p class="tag">Flexbox</p>
           </div>
         </article>
-
-        <article class="card">
-          <a target="_blank" rel="noopener noreferrer" href="https://github.com/Ragtulf/project-survey" class="image-box">
-            <img src="./assets/Survey.jpg" alt="A screenshot of the survey">
-            <div class="over-image">
-                <h6 class="project-name">TAKE THE SURVEY!</h6>
-            </div>
-          </a>
-          <a target="_blank" rel="noopener noreferrer" href="https://github.com/Ragtulf/project-survey" class="project-description">
-            <span class="red-bold">I-WANT-TO-GET-TO-KNOW-YOU-SURVEY</span> Online survey that wants to get to know you <span class="red-bold underlined">>></span>
-          </a>
-          <div class="tags">
-            <p class="tag">React.js</p>
-            <p class="tag">JavaScript</p>
-            <p class="tag">Flexbox</p>
-            <p class="tag">CSS</p>
-          </div>
-        </article>
       </div>  
 
       <!-- OTHER PROJECTS -->
       
       <h5>OTHER PROJECTS</h5>
       <div class="other-projects">
+        <div class="other-pro-container">
+          <a target="_blank" rel="noopener noreferrer" href="https://github.com/Ragtulf/project-survey" class="project-description">
+            <span class="red-bold red-bold-underlined">I-WANT-TO-GET-TO-KNOW-YOU-SURVEY. </span>  Online survey that wants to get to know you  <span class="red-bold red-bold-underlined">>></span>
+          </a>
+          <div class="tags">
+            <p class="tag">React.js</p>
+            <p class="tag">JavaScript</p>
+            <p class="tag">CSS</p>
+            <p class="tag">Flexbox</p>
+          </div>
+        </div>
+
         <div class="other-pro-container">
           <a target="_blank" rel="noopener noreferrer" href="https://github.com/Ragtulf/project-music-releases" class="project-description">
             <span class="red-bold red-bold-underlined">MUSIC RELEASES.</span> A music release site that pulls data from a static API. <span class="red-bold red-bold-underlined">>></span>
@@ -234,7 +246,7 @@
           </div>
         </div> 
 
-        <div class="other-pro-container">
+        <!-- <div class="other-pro-container">
           <a target="_blank" rel="noopener noreferrer" href="https://github.com/Ragtulf/project-pizza-bot" class="project-description">
             <span class="red-bold red-bold-underlined">PIZZA BOT.</span> My first JavaScript project. Chat with a pizza bot. Hours of fun. <span class="red-bold red-bold-underlined">>></span>
           </a>
@@ -243,7 +255,7 @@
             <p class="tag">HTML5</p>
             <p class="tag">pair-programming</p>
           </div>
-        </div>
+        </div> -->
 
         <div class="other-pro-container">
           <a target="_blank" rel="noopener noreferrer" href="https://github.com/Ragtulf/project-business-site" class="project-description">
@@ -314,9 +326,9 @@
         <span class="red-thin red-underline">FEB 2020</span> A Newbie Developer. <span class="red-bold red-underline">>></span>
       </a>
 
-      <a target="_blank" rel="noopener noreferrer" href="#" class="more-thoughts-list red-on-hover">
+      <!-- <a target="_blank" rel="noopener noreferrer" href="#" class="more-thoughts-list red-on-hover">
         <span class="red-thin red-underline">DEC 2019</span> Happy Coding! <span class="red-bold red-underline">>></span>
-      </a>
+      </a> -->
     </div> 
   </section>
      
